--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Assets/BTAssetsTransiferVC.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Assets/BTAssetsTransiferVC.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BTAssetsTransiferVC">
             <connections>
+                <outlet property="balance" destination="FDm-vm-Fk9" id="Wgu-IE-eh2"/>
                 <outlet property="coinAddress" destination="cDi-AQ-fz9" id="iOo-Vk-FnE"/>
                 <outlet property="coinCountInput" destination="K1A-rH-DhN" id="L1p-LA-TR6"/>
                 <outlet property="fee" destination="JKq-JS-uuB" id="Tg4-EW-5kZ"/>
@@ -28,22 +29,19 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="glN-ya-tnM">
                             <rect key="frame" x="12" y="20" width="390" height="60"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请选择币种" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vJ6-4X-AWW">
-                                    <rect key="frame" x="12" y="22" width="67" height="16"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="币种" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vJ6-4X-AWW">
+                                    <rect key="frame" x="12" y="22" width="27" height="16"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                    <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fRl-Xx-i9c">
-                                    <rect key="frame" x="298" y="15" width="80" height="30"/>
+                                    <rect key="frame" x="341" y="15" width="37" height="30"/>
                                     <constraints>
-                                        <constraint firstAttribute="width" constant="80" id="BdQ-V5-dcP"/>
                                         <constraint firstAttribute="height" constant="30" id="Fc6-3P-3Wf"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                    <inset key="titleEdgeInsets" minX="-20" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                    <inset key="imageEdgeInsets" minX="60" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                    <state key="normal" title="BTCK" image="icon_walletEnter">
+                                    <state key="normal" title="BTCK">
                                         <color key="titleColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                     </state>
                                     <connections>
@@ -83,7 +81,7 @@
                                     </connections>
                                 </button>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请填写收币账户地址" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cDi-AQ-fz9">
-                                    <rect key="frame" x="12" y="34" width="326" height="17.5"/>
+                                    <rect key="frame" x="12" y="34.5" width="326" height="16"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
@@ -107,7 +105,7 @@
                             <rect key="frame" x="12" y="185" width="390" height="85"/>
                             <subviews>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请填写提币数量最小金额20.000000BTCK" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="K1A-rH-DhN">
-                                    <rect key="frame" x="12" y="34" width="315" height="17.5"/>
+                                    <rect key="frame" x="12" y="34.5" width="315" height="16"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
@@ -152,19 +150,19 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="矿工费每笔" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nqU-11-MY4">
-                            <rect key="frame" x="26" y="283" width="57" height="14"/>
+                            <rect key="frame" x="320.5" y="283" width="57" height="14"/>
                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="11"/>
                             <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JKq-JS-uuB">
-                            <rect key="frame" x="85" y="283.5" width="20" height="13.5"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JKq-JS-uuB">
+                            <rect key="frame" x="379.5" y="283" width="7.5" height="14"/>
                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="11"/>
                             <color key="textColor" red="0.81960784313725488" green="0.6588235294117647" blue="0.4392156862745098" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="个" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UYV-s1-0j0">
-                            <rect key="frame" x="105" y="283" width="12" height="14"/>
+                            <rect key="frame" x="387" y="283" width="12" height="14"/>
                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="11"/>
                             <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
@@ -229,9 +227,22 @@
                                 <action selector="confirmAction:" destination="-1" eventType="touchUpInside" id="C8Y-ne-v5j"/>
                             </connections>
                         </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="可用：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sTc-mg-Zz3">
+                            <rect key="frame" x="15" y="283" width="34" height="14"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="11"/>
+                            <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FDm-vm-Fk9">
+                            <rect key="frame" x="51" y="283.5" width="20" height="13.5"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="11"/>
+                            <color key="textColor" red="0.81960784310000001" green="0.6588235294" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
+                        <constraint firstAttribute="trailing" secondItem="UYV-s1-0j0" secondAttribute="trailing" constant="15" id="2Qd-TC-qFq"/>
                         <constraint firstItem="FCA-sV-Gt7" firstAttribute="top" secondItem="xji-NU-Baa" secondAttribute="bottom" constant="10" id="51Y-iy-d0m"/>
                         <constraint firstAttribute="bottom" secondItem="7GX-jW-Rlc" secondAttribute="bottom" constant="30" id="5oh-eQ-ngQ"/>
                         <constraint firstAttribute="trailing" secondItem="glN-ya-tnM" secondAttribute="trailing" constant="12" id="7VH-TQ-m56"/>
@@ -239,9 +250,12 @@
                         <constraint firstItem="L9g-pD-AMV" firstAttribute="top" secondItem="nqU-11-MY4" secondAttribute="bottom" constant="25" id="8gC-b2-eq0"/>
                         <constraint firstItem="xji-NU-Baa" firstAttribute="trailing" secondItem="glN-ya-tnM" secondAttribute="trailing" id="9zm-wX-jJZ"/>
                         <constraint firstItem="L9g-pD-AMV" firstAttribute="leading" secondItem="glN-ya-tnM" secondAttribute="leading" id="AUu-D8-O8f"/>
-                        <constraint firstItem="nqU-11-MY4" firstAttribute="leading" secondItem="r16-gm-1Pu" secondAttribute="leading" constant="26" id="Dzn-o7-L2D"/>
+                        <constraint firstItem="FDm-vm-Fk9" firstAttribute="centerY" secondItem="sTc-mg-Zz3" secondAttribute="centerY" id="CP5-vL-5jA"/>
+                        <constraint firstItem="FDm-vm-Fk9" firstAttribute="leading" secondItem="sTc-mg-Zz3" secondAttribute="trailing" constant="2" id="FLn-AM-2bH"/>
                         <constraint firstItem="JKq-JS-uuB" firstAttribute="leading" secondItem="nqU-11-MY4" secondAttribute="trailing" constant="2" id="G7d-9h-Kk1"/>
+                        <constraint firstItem="sTc-mg-Zz3" firstAttribute="leading" secondItem="r16-gm-1Pu" secondAttribute="leading" constant="15" id="HTM-Ab-kmt"/>
                         <constraint firstItem="nqU-11-MY4" firstAttribute="top" secondItem="FCA-sV-Gt7" secondAttribute="bottom" constant="13" id="LT2-LA-5dk"/>
+                        <constraint firstItem="sTc-mg-Zz3" firstAttribute="centerY" secondItem="UYV-s1-0j0" secondAttribute="centerY" id="MmQ-t2-MUY"/>
                         <constraint firstItem="JKq-JS-uuB" firstAttribute="centerY" secondItem="nqU-11-MY4" secondAttribute="centerY" id="N0G-Yu-OU3"/>
                         <constraint firstItem="UYV-s1-0j0" firstAttribute="centerY" secondItem="nqU-11-MY4" secondAttribute="centerY" id="PfG-lI-4BF"/>
                         <constraint firstItem="7GX-jW-Rlc" firstAttribute="top" secondItem="L9g-pD-AMV" secondAttribute="bottom" constant="50" id="SRa-SJ-DAf"/>
@@ -274,6 +288,5 @@
         <image name="icon_scan" width="20" height="20"/>
         <image name="icon_showPassword" width="20" height="20"/>
         <image name="icon_showPasswordSelected" width="20" height="20"/>
-        <image name="icon_walletEnter" width="12" height="12"/>
     </resources>
 </document>
